[gd_scene load_steps=47 format=3 uid="uid://d1vl4eb7lilqw"]

[ext_resource type="PackedScene" uid="uid://botai66n8rwt3" path="res://addons/top_down/scenes/actors/actor.tscn" id="1_j6u2o"]
[ext_resource type="Script" uid="uid://bfrujoe7b8kfv" path="res://addons/great_games_library/nodes/ResourceNode/ResourceNodeItem.gd" id="2_xywgh"]
[ext_resource type="Script" uid="uid://ticn5s8bfep6" path="res://addons/top_down/scripts/actor/ActorStatsResource.gd" id="3_d6vjy"]
[ext_resource type="Script" uid="uid://cmp83qy0hsjyv" path="res://addons/top_down/scripts/damage/HealthResource.gd" id="4_pqrmw"]
[ext_resource type="Script" uid="uid://dr75ttkns1hyy" path="res://addons/top_down/scripts/actor/PushResource.gd" id="5_6dcwu"]
[ext_resource type="Script" uid="uid://dm3b7cxadprx0" path="res://addons/top_down/scripts/input/InputResource.gd" id="6_64i5l"]
[ext_resource type="Script" uid="uid://dqe8os6rf54ca" path="res://addons/top_down/scripts/damage/DamageResource.gd" id="7_bwls5"]
[ext_resource type="Script" uid="uid://bywrj5osehdeq" path="res://addons/great_games_library/resources/ValueResource/BoolResource.gd" id="8_pqrmw"]
[ext_resource type="Shader" uid="uid://wr0huhjuo6vd" path="res://addons/top_down/scripts/shaders/color_flash.gdshader" id="8_t6h56"]
[ext_resource type="Texture2D" uid="uid://ct1rxdhxn73qh" path="res://addons/top_down/assets/images/characters/slime_16x16_strip8.png" id="9_0jyv2"]
[ext_resource type="Resource" uid="uid://cko7bkv2lwd4l" path="res://resources/instance_resources/actors/dead/enemy_slime_dead_instance.tres" id="10_guyi0"]
[ext_resource type="Resource" uid="uid://bmurrqosq7bec" path="res://addons/top_down/resources/sounds/kill_zombie.tres" id="10_xywgh"]
[ext_resource type="Script" uid="uid://1rbr4is74e7l" path="res://addons/top_down/scripts/damage/properties/DamageTypeResource.gd" id="11_xywgh"]
[ext_resource type="Resource" uid="uid://bto6gjv35d18b" path="res://resources/instance_resources/vfx/damage_points_instance.tres" id="13_6dcwu"]
[ext_resource type="Resource" uid="uid://2syqn84y4e0h" path="res://resources/instance_resources/vfx/status_effects/poison_effect_instance.tres" id="13_xnvjk"]
[ext_resource type="Resource" uid="uid://duiraau8dglnr" path="res://resources/instance_resources/vfx/status_effects/fire_effect_instance.tres" id="14_ck6d8"]
[ext_resource type="PackedScene" uid="uid://cenq1bawfywu8" path="res://addons/top_down/scenes/actors/ai/enemy_ai.tscn" id="15_0jyv2"]
[ext_resource type="Resource" uid="uid://uis462y1vain" path="res://resources/instance_resources/vfx/status_effects/lightning_effect_instance.tres" id="15_hl6bb"]
[ext_resource type="PackedScene" uid="uid://baisjmcsnk3on" path="res://addons/top_down/scenes/weapons/zombie_attack.tscn" id="16_guyi0"]
[ext_resource type="Resource" uid="uid://krs6vdtpigv" path="res://resources/instance_resources/vfx/status_effects/curse_effect_instance.tres" id="16_n8r7b"]
[ext_resource type="Script" uid="uid://c0aipoimc2hru" path="res://addons/great_games_library/resources/InstanceResource/PoolNode.gd" id="17_7p48n"]
[ext_resource type="Resource" uid="uid://b6uwrns63adtx" path="res://resources/instance_resources/vfx/status_effects/ice_effect_instance.tres" id="17_qskx6"]
[ext_resource type="Script" uid="uid://cg28p7oj86ktp" path="res://addons/top_down/scripts/actor/bots/ActiveEnemy.gd" id="18_1v2yq"]
[ext_resource type="Resource" uid="uid://ck2npsebp5biw" path="res://resources/instance_resources/actors/enemy_slime_small_actor_instance_resource.tres" id="19_xnvjk"]
[ext_resource type="Resource" uid="uid://dedx0gi4fowby" path="res://addons/top_down/resources/global_resources/axis_multiplication_resource.tres" id="21_ck6d8"]
[ext_resource type="Script" uid="uid://hureceihbtfw" path="res://scripts/actor/bots/enemy_split.gd" id="21_xnvjk"]

[sub_resource type="Resource" id="Resource_16400"]
resource_name = "movement  properties"
script = ExtResource("3_d6vjy")
acceleration = 300.0
max_speed = 35.0
default_max_speed = 35.0
version = 0
not_saved = false

[sub_resource type="Resource" id="Resource_7jqce"]
resource_name = "movement"
script = ExtResource("2_xywgh")
resource = SubResource("Resource_16400")
make_unique = true
description = ""

[sub_resource type="Resource" id="Resource_y76f1"]
resource_name = "Health resource"
script = ExtResource("4_pqrmw")
hp = 50.0
max_hp = 50.0
reset_hp = 50.0
reset_max_hp = 50.0
is_dead = false
version = 0
not_saved = false

[sub_resource type="Resource" id="Resource_vm74s"]
resource_name = "health"
script = ExtResource("2_xywgh")
resource = SubResource("Resource_y76f1")
make_unique = true
description = ""

[sub_resource type="Resource" id="Resource_xhp0x"]
resource_name = "Push Resource"
script = ExtResource("5_6dcwu")
version = 0
not_saved = false

[sub_resource type="Resource" id="Resource_ltyge"]
resource_name = "push"
script = ExtResource("2_xywgh")
resource = SubResource("Resource_xhp0x")
make_unique = true
description = ""

[sub_resource type="Resource" id="Resource_k8ute"]
resource_name = "Input resource"
script = ExtResource("6_64i5l")
axis = Vector2(0, 0)
action_1 = false
action_2 = false
aim_direction = Vector2(0, 0)
version = 0
not_saved = false

[sub_resource type="Resource" id="Resource_ju227"]
resource_name = "input"
script = ExtResource("2_xywgh")
resource = SubResource("Resource_k8ute")
make_unique = true
description = "Used to control actors movement by it's input node.
"

[sub_resource type="Resource" id="Resource_1jkvc"]
resource_name = "Damage Resource"
script = ExtResource("7_bwls5")
can_receive_damage = true
resistance_value_list = Array[float]([])
version = 0
not_saved = false

[sub_resource type="Resource" id="Resource_gytac"]
resource_name = "damage"
script = ExtResource("2_xywgh")
resource = SubResource("Resource_1jkvc")
make_unique = true
description = "Receives report from delt and received damage."

[sub_resource type="Resource" id="Resource_kivos"]
resource_name = "Hole bool"
script = ExtResource("8_pqrmw")
value = false
default_value = false
version = 0
not_saved = false

[sub_resource type="Resource" id="Resource_6dcwu"]
resource_name = "hole"
script = ExtResource("2_xywgh")
resource = SubResource("Resource_kivos")
make_unique = true
description = ""

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0jyv2"]
size = Vector2(8, 5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_guyi0"]
size = Vector2(14, 11)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_14so1"]
resource_local_to_scene = true
shader = ExtResource("8_t6h56")
shader_parameter/overlay = Color(1, 1, 1, 1)
shader_parameter/blend = 0.0

[sub_resource type="Animation" id="Animation_xywgh"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_gm7cs"]
resource_name = "idle"
length = 0.4
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_b1txh"]
resource_name = "walk"
length = 0.6
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [2, 3, 4, 5, 6, 7]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xywgh"]
_data = {
&"RESET": SubResource("Animation_xywgh"),
&"idle": SubResource("Animation_gm7cs"),
&"walk": SubResource("Animation_b1txh")
}

[sub_resource type="Resource" id="Resource_1v2yq"]
script = ExtResource("11_xywgh")
value = 3.0
resistance_value = 0.0
type = 0
allow_on_boss = false

[node name="EnemySlimeActor" groups=["enemies"] instance=ExtResource("1_j6u2o")]
collision_layer = 4
collision_mask = 5

[node name="ResourceNode" parent="." index="0"]
list = Array[ExtResource("2_xywgh")]([SubResource("Resource_7jqce"), SubResource("Resource_vm74s"), SubResource("Resource_ltyge"), SubResource("Resource_ju227"), SubResource("Resource_gytac"), SubResource("Resource_6dcwu")])

[node name="CollisionShape2D" parent="." index="1"]
position = Vector2(0, -2.5)
shape = SubResource("RectangleShape2D_0jyv2")

[node name="AreaReceiver2D" parent="." index="2"]
collision_layer = 4

[node name="CollisionShape2D" parent="AreaReceiver2D" index="0"]
position = Vector2(0, -5.5)
shape = SubResource("RectangleShape2D_guyi0")

[node name="HoleDataReceiver" parent="AreaReceiver2D" index="1"]
enabled = false

[node name="Sprite2D" parent="Body/Stretch" index="0"]
material = SubResource("ShaderMaterial_14so1")
position = Vector2(0, 0)
texture = ExtResource("9_0jyv2")
offset = Vector2(0, -8)

[node name="CharacterAnimator" parent="Body/Stretch/Sprite2D" index="0"]
libraries = {
&"": SubResource("AnimationLibrary_xywgh")
}

[node name="HoleDeath" parent="." index="10"]
enabled = false

[node name="ActorDamage" parent="." index="11" node_paths=PackedStringArray("status_setup")]
status_setup = NodePath("../StatusSetup")
sound_resource_dead = ExtResource("10_xywgh")
dead_vfx_instance_resource = ExtResource("10_guyi0")
poison_effect_instance_resource = ExtResource("13_xnvjk")
fire_effect_instance_resource = ExtResource("14_ck6d8")
lightning_effect_instance_resource = ExtResource("15_hl6bb")
curse_effect_instance_resource = ExtResource("16_n8r7b")
ice_effect_instance_resource = ExtResource("17_qskx6")

[node name="DamageDisplay" parent="." index="12"]
damage_points_instance_resource = ExtResource("13_6dcwu")

[node name="DamageSetup" parent="." index="13"]
resistance_list = Array[ExtResource("11_xywgh")]([SubResource("Resource_1v2yq")])

[node name="ZombieInput" parent="." index="15" node_paths=PackedStringArray("resource_node") instance=ExtResource("15_0jyv2")]
resource_node = NodePath("../ResourceNode")

[node name="SlashAttack" parent="." index="16" node_paths=PackedStringArray("resource_node") instance=ExtResource("16_guyi0")]
collision_mask = 2
resource_node = NodePath("../ResourceNode")

[node name="PoolNode" type="Node" parent="." index="17" node_paths=PackedStringArray("animation_player_list", "listen_node")]
process_mode = 3
script = ExtResource("17_7p48n")
animation_player_list = [NodePath("../Body/Stretch/Sprite2D/CharacterAnimator"), NodePath("../Body/Stretch/Sprite2D/ColorFlash")]
listen_node = NodePath("../ActorDamage")
signal_name = &"actor_died"

[node name="EnemySplit" type="Node" parent="." index="18" node_paths=PackedStringArray("resource_node", "position_node", "active_enemy")]
script = ExtResource("21_xnvjk")
resource_node = NodePath("../ResourceNode")
split_instance_resource = ExtResource("19_xnvjk")
angles = Array[float]([0.0, -25.0, 25.0, -65.0, 65.0])
axis_multiplication = ExtResource("21_ck6d8")
position_node = NodePath("..")
active_enemy = NodePath("../ActiveEnemy")

[node name="ActiveEnemy" type="Node" parent="." index="19" node_paths=PackedStringArray("resource_node")]
script = ExtResource("18_1v2yq")
resource_node = NodePath("../ResourceNode")
